--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #1e4f2a;
+    background-color: #aaba78;
 }
 
 header {
-    background-color: #fdc500;
+    background-color: #fbec88;
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
@@ -19,16 +19,16 @@ header {
     border-radius: 30px;
     width: 60px;
     margin: 30px;
-    border: solid white 2px;
+    border: solid #f0ca6a 2px;
 }
 
 .logo:hover {
-    border: solid #3a7d44;
+    border: solid #aaba78;
 }
 
 
 nav ul li a:hover {
-    background-color: #1e4f2a;
+    background-color: #3a7d44;
     border: solid 2px white;
     transition: 1s;
 }
@@ -61,7 +61,7 @@ h2 {
 
 .h2Header {
     font-size: 30px;
-    color: #3a7d44;
+    color: black;
     text-decoration: underline;
 }
 
@@ -72,7 +72,6 @@ h3 {
 
 p {
     color: black;
-    background-color: white;
     margin: 10px;
     padding: 10px;
 }
@@ -98,7 +97,7 @@ p {
 }
 
 form {
-    background-color: #fdc500;
+    background-color: #fbec88;
     color: white;
     margin: 10px;
     padding: 40px;
@@ -107,7 +106,7 @@ form {
 
 footer {
     text-align: center;
-    background-color: #fdc500;
+    background-color: #fbec88;
     height: 80px;
 }
 
@@ -139,31 +138,29 @@ footer {
 }
 
 @media(min-width:1200px) {
-    body {
-        background-color: #1e4f2a;
+    body{
+        background-color: #aaba78;
     }
-
+    
     header {
-        background-color: #fdc500;
+        background-color: #fbec88;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
     }
-
+    
     .logo {
         border-radius: 30px;
         width: 60px;
         margin: 30px;
-        border: solid white 2px;
+        border: solid black 2px;
         transition: 1s;
     }
-
+    
     .logo:hover {
-        transition: 1s;
-        width: 65px;
+        border: solid #1e4f2a 2px;
     }
-
     nav ul {
         display: flex;
         margin: 30px;
@@ -175,20 +172,20 @@ footer {
     }
 
     nav ul li a {
-        color: #fdc500;
+        color: black;
         font-size: 20px;
         text-decoration: none;
         border-radius: 10px;
         margin: 10px;
         padding: 10px;
-        background-color: #3a7d44;
-        border: solid 2px white;
+        background-color: #aaba78;
+        border: solid 2px black;
         transition: 1s;
     }
 
     nav ul li a:hover {
-        background-color: #1e4f2a;
-        border: solid 2px white;
+        background-color: #f0ca6a;
+        border: solid 2px black;
         transition: 1s;
     }
 
@@ -220,7 +217,7 @@ footer {
 
     .h2Header {
         font-size: 70px;
-        color: #3a7d44;
+        color: black;
         text-decoration: underline;
     }
 
@@ -229,8 +226,8 @@ footer {
     }
 
     p {
+        font-size: 20px;
         color: black;
-        background-color: white;
         margin: 10px;
         padding: 10px;
     }
@@ -250,13 +247,13 @@ footer {
         width: 300px;
         height: 200px;
         object-fit: cover;
-        border: 2px solid white;
+        border: 2px solid black;
         border-radius: 10px;
         transition: transform 0.3s;
     }
 
     form {
-        background-color: #fdc500;
+        background-color: #fbec88;
         color: white;
         margin: 10px;
         padding: 40px;
@@ -265,7 +262,7 @@ footer {
 
     footer {
         text-align: center;
-        background-color: #fdc500;
+        background-color: #fbec88;
         height: 80px;
     }
 
