--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@ footer {
     text-align: center;
     background-color: #fbec88;
     height: 80px;
+    width: 100%;
 }
 
 .logoRedes {
@@ -117,56 +118,65 @@ footer {
     }
 
     .h1Secundario {
-        background-color: #1e4f2a;
-        height: 50px;
-    }
-
-    .h2Header {
-        font-size: 20px;
-    }
-
-    p {
-        font-size: 20px;
-    }
-}
-
-@media (min-width: 1200px) {
-    
-    nav ul li a {
-        color:  black;
-        font-size: 20px;
-        text-decoration: none;
-        border-radius: 10px;
-        margin: 20px;
-        padding: 10px;
-        background-color: #aaba78;
-        border: solid 2px black;
-        transition: 1s;
-    }
-
-    nav ul li a {
-        color: black;
-    }
-
-    nav ul li a:hover {
         background-color: #f0ca6a;
-    }
-
-    h1 {
-        background-color: black;
-        color: black;
-    }
-
-    .h1Secundario {
-        background-color: #1e4f2a;
         height: 50px;
     }
 
     .h2Header {
-        font-size: 70px;
+        font-size: 20px;
     }
 
     p {
         font-size: 20px;
     }
 }
+
+    @media (min-width: 1200px) {
+        header {
+            justify-content: space-between;
+        }
+    
+        .logo {
+            margin-right: 50px;
+        }
+    
+        .h2Header {
+            font-size: 70px;
+            margin: 0 50px; 
+        }
+    
+        nav ul {
+            gap: 30px;
+        }
+    
+        nav ul li a {
+            color: black;
+            font-size: 20px;
+            text-decoration: none;
+            border-radius: 10px;
+            margin: 20px;
+            padding: 10px;
+            background-color: #aaba78;
+            border: solid 2px black;
+            transition: 1s;
+        }
+    
+        nav ul li a:hover {
+            background-color: #f0ca6a;
+        }
+    
+        h1 {
+            background-color: black;
+            color: black;
+        }
+    
+        .h1Secundario {
+            background-color: #f0ca6a;
+            height: 70px;
+        }
+    
+        p {
+            font-size: 20px;
+        }
+    }
+    
