--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #fbe134;
+  background-color: #fdc500;
   width: 100%;
   overflow-x: hidden;
 }
@@ -17,7 +17,7 @@ body {
 
 header {
   width: 100%;
-  background-color: #007f5f;
+  background-color: #3a7d44;
   overflow-x: hidden;
 }
 
@@ -33,7 +33,7 @@ header {
   width: 60px;
   margin: 10px;
   transition: 1s;
-  border: solid #fbe134 3px;
+  border: solid #fdc500 3px;
 }
 .logo:hover {
   transform: scale(1.3);
@@ -41,11 +41,11 @@ header {
 
 .navbar-toggler {
   padding: 0px;
-  border: solid #fbe134 7px;
+  border: solid #fdc500 7px;
 }
 
 .navbar-toggler-icon {
-  background-color: #fbe134;
+  background-color: #fdc500;
 }
 
 .nav-link {
@@ -53,19 +53,19 @@ header {
   padding-left: 20px;
   font-size: 18px;
   background-color: black;
-  color: #fbe134;
-  border: solid #fbe134 3px;
+  color: #fdc500;
+  border: solid #fdc500 3px;
   transition: 0.5s;
 }
 .nav-link:hover {
   background-color: #1e4f2a;
-  color: #fbe134;
+  color: #fdc500;
   transform: scale(0.9);
 }
 
 .h2Header {
   font-size: 25px;
-  color: #fbe134;
+  color: #fdc500;
   text-decoration: underline;
   margin-right: 30px;
 }
@@ -77,8 +77,8 @@ main {
 #h1Primario {
   display: flex;
   justify-content: center;
-  color: #fbe134;
-  background-image: linear-gradient(#007f5f, #fbe134);
+  color: #fdc500;
+  background-image: linear-gradient(#3a7d44, #fdc500);
   height: 150px;
   font-size: 50px;
 }
@@ -88,7 +88,7 @@ main {
   justify-content: center;
   align-items: center;
   font-size: 50px;
-  color: #fbe134;
+  color: #fdc500;
   background-color: black;
   height: 80px;
 }
@@ -117,7 +117,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #007f5f;
+  background-color: #3a7d44;
   height: 80px;
   width: 100%;
   overflow-x: hidden;
@@ -202,7 +202,7 @@ img {
   background-size: cover;
   width: 100%;
   height: 400px;
-  color: #fbe134;
+  color: #fdc500;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -211,9 +211,9 @@ img {
 
 form {
   box-shadow: 0 10px 20px black;
-  background-color: #007f5f;
-  color: #fbe134;
-  margin: 10px;
+  background-color: #3a7d44;
+  color: #fdc500;
+  margin: 30px;
   padding: 20px;
   text-align: center;
 }
@@ -237,9 +237,9 @@ textarea {
 
 button {
   background-color: black;
-  color: #fbe134;
+  color: #fdc500;
   padding: 10px 40px;
-  border: solid #fbe134 3px;
+  border: solid #fdc500 3px;
   transition: 0.5s;
   border-radius: 5px;
 }
@@ -319,18 +319,25 @@ iframe {
     margin-left: 30px;
   }
   p {
-    font-size: 25px;
+    font-size: 20px;
+  }
+  .pIndex {
+    font-size: 22px;
   }
   .nosotrosContainer {
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-areas: "articulo1 imagen1 articulo2" "articulo1 imagen2 articulo2";
+  }
+  form {
+    margin: 50px 100px;
   }
   .mapa-container {
     box-shadow: 0 10px 20px black;
     display: flex;
     justify-content: center;
-    margin: 10px;
-    height: 92%;
+    margin: 50px;
+    margin-top: 100px;
+    height: 70%;
   }
   iframe {
     height: 100%;
