--- a/scss/variables/_colores.scss
+++ b/scss/variables/_colores.scss
@@ -1,3 +1,3 @@
-$color-principal: #fbe134;
-$color-secundario: #007f5f;
+$color-principal: #fdc500;
+$color-secundario: #3a7d44;
 $color-terciario: #1e4f2a;
